--- a/assets/sass/elements/_code.scss
+++ b/assets/sass/elements/_code.scss
@@ -13,31 +13,31 @@ code {
   word-wrap: break-word;
   word-break: break-all;
   font-size: $type-md;
-  // background-color: var(--bg-white);
+  background-color: var(--bg-white);
 }
 
 p code,
 li code {
-  // color: var(--color-code-inline);
+  color: var(--color-code-inline);
   padding: half($space-8) $space-8;
-  // background-color: var(--bg-white);
+  background-color: var(--bg-white);
   border-radius: $global-border-radius;
 }
 
-// Prism.js Customization
+// // Prism.js Customization
 
-pre[class*='language-'] {
-  padding: $space-32;
-  margin-bottom: 0;
-  margin-top: $space-32;
-  // background-color: var(--bg-white);
-  border-radius: $global-border-radius;
-}
+// pre[class*='language-'] {
+//   padding: $space-32;
+//   margin-bottom: 0;
+//   margin-top: $space-32;
+//   background-color: var(--bg-white);
+//   border-radius: $global-border-radius;
+// }
 
-code[class*='language-'],
-pre[class*='language-'] {
-  white-space: pre-wrap;
-  word-break: break-all;
-  line-height: inherit;
-  // background-color: var(--bg-white);
-}
+// code[class*='language-'],
+// pre[class*='language-'] {
+//   white-space: pre-wrap;
+//   word-break: break-all;
+//   line-height: inherit;
+//   background-color: var(--bg-white);
+// }
