--- a/assets/sass/elements/_code.scss
+++ b/assets/sass/elements/_code.scss
@@ -26,13 +26,13 @@ li code {
 
 // // Prism.js Customization
 
-// pre[class*='language-'] {
-//   padding: $space-32;
-//   margin-bottom: 0;
-//   margin-top: $space-32;
-//   background-color: var(--bg-white);
-//   border-radius: $global-border-radius;
-// }
+pre[class*='language-'] {
+  //   padding: $space-32;
+  //   margin-bottom: 0;
+  //   margin-top: $space-32;
+  //   background-color: var(--bg-white);
+  border-radius: $global-border-radius;
+}
 
 // code[class*='language-'],
 // pre[class*='language-'] {
