--- a/partials/subscribe-form.hbs
+++ b/partials/subscribe-form.hbs
@@ -5,7 +5,7 @@
     <button type='submit' value='{{t 'Subscribe' }}' class='c-btn c-btn--small c-btn--action c-subscribe-form__btn'>{{t 'Subscribe' }}</button>
   </div>
 
-  <div class='c-alert c-alert--success'>{{t 'Please check your inbox and click the link to confirm your subscription.' }}</div>
+  <div class='c-alert c-alert--success'>{{t 'Please check your inbox and click the link to confirm your subscription. (Check promotions if you use gmail)' }}</div>
   <div class='c-alert c-alert--invalid'>{{t 'Please enter a valid email address!' }}</div>
   <div class='c-alert c-alert--error'>{{t 'An error occurred, please try again later.' }}</div>
 </form>
