Added Linkedin icon, removed YouTube

--- a/partials/sidebar-social-icons.hbs
+++ b/partials/sidebar-social-icons.hbs
@@ -14,6 +14,12 @@
       </a>
     </li>
 
+    <li class='c-social-icons__item'>
+      <a href='https://www.linkedin.com/in/henryblack1/' aria-label='LinkedIn' target='_blank' rel='noopener'>
+        <span class='c-social-icons__icon' data-icon='ei-sc-linkedin' data-size='s'></span>
+      </a>
+    </li>
+
     {{#if @site.facebook}}
       <li class='c-social-icons__item'>
         <a href='{{ facebook_url }}' aria-label='Facebook' target='_blank' rel='noopener'>
@@ -34,11 +40,11 @@
       </a>
     </li> --}}
 
-    <li class='c-social-icons__item'>
+    {{!-- <li class='c-social-icons__item'>
       <a href='https://youtube.com/user/blackhaj' aria-label='YouTube' target='_blank' rel='noopener'>
         <span class='c-social-icons__icon' data-icon='ei-sc-youtube' data-size='s'></span>
       </a>
-    </li>
+    </li> --}}
 
     <li class='c-social-icons__item'>
       <a href='/rss' aria-label='RSS' target='_blank' rel='noopener' title='RSS'>
